@@ -33,6 +33,8 @@ dontescape:
 	if (dest) dest[written]='\n'; ++written; linelen=0;
       }
     }
+    /* in case someone gives us malicious input */
+    if (written>((size_t)-1)/2) return (size_t)-1;
   }
   if (linelen) {
     if (dest) dest[written]='\n'; ++written; linelen=0;
